working on basic objects

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
 
+
+
+      <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
