--- a/index.html
+++ b/index.html
@@ -5,7 +5,64 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
+    <h1>Salmon Cookies by Pat</h1>
 
+<!--Pioneer Square Store section-->
+    <h2>Pioneer Square</h2>
+    <table>
+        <thead>
+          <tr>
+            <th>Time</th>
+            <th>Avg. Cookies Sold per Hour</th>
+          </tr>
+        </thead>
+        <tbody id="pioneer-square"></tbody>
+    </table>
+
+<!--Portland Airport Store section-->
+    <h2>Portland Airport</h2>
+    <table>
+      <tr>
+        <th>Time</th>
+        <th>Avg. Cookies Sold per Hour</th>
+      </tr>
+      <tr>
+        <td>10:00 am</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>11:00 am</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>12:00 pm</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>1:00 pm</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>2:00 pm</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>3:00 pm</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>4:00 pm</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>5:00 pm</td>
+        <td></td>
+      </tr>
+      <tr>
+        <td>TOTAL: </td>
+        <td></td>
+      </tr>
+    </table>
 
 
       <script type="text/javascript" src="main.js"></script>
