--- a/styleguide.html
+++ b/styleguide.html
@@ -1,16 +1,49 @@
 <!DOCTYPE html>
 <html>
 
-Main Logo/Header Guidelines
+  <head>
+    <link rel="stylesheet" type="text/css" href="styleguide.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  </head>
+  <body>
+    <h1 id="title">Salmon Cookies by Pat - Styleguide</h1>
 
-Typography
+    <h1 class="alt-h1">Main Logo/Header Guidelines</h1>
 
-Header 1
+    <img src="./images/salmon.png" alt="Salmon Logo" width=300px height=100px />
+    <p>Font-family: Arial, sans-serif<br>
+      Font-weight: bold<br>
+      Font-color: black<br>
+    </p>
 
-Header 2
+    <h1 class="alt-h1">Typography</h1>
 
-Header 3
+    <h1>Header 1</h1>
+    <p>Font-family: Montserrat, sans-serif<br>
+      Color: #ff9966<br>
+      Use this custom font for headlines/highlights<br>
+    </p>
 
-Color Palette
+    <h2>Header 2</h2>
+    <p>Font-family: Montserrat, sans-serif<br>
+      Color: #808080<br>
+      Use this custom font for headlines/highlights<br>
+    </p>
 
+    <h3>Header 3</h3>
+    <p>Font-family: Montserrat, sans-serif<br>
+      Color: #ffcc00<br>
+      Use this custom font for headlines/highlights<br>
+    </p>
+
+    <h1 class="alt-h1">Body</h1>
+    <p>Background color: light salmon<p>
+
+    <p>This is body copy<br><br>
+    Font-family: Palatino, serif<br>
+    Font-color: black<br>
+    Use this font for body copy<br>
+
+
+  </body>
 </html>
