--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   </head>
   <body>
-    <h1>Salmon Cookies by Pat</h1>
 
-    <div id="store-container"></div>
+    <header>
+      <img src="./images/salmon.png" alt="Salmon Logo" class="image1" />
+      <h1>Salmon Cookies by Pat</h1>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Products</li>
+          <li>Locations</li>
+        </ul>
+      </nav>
 
-      <script type="text/javascript" src="main.js"></script>
+    </header>
+
+    <section>
+      <div id="store-container"></div>
+    </section>
+
+    <footer>
+      &copy 2018 Salmon Cookies by Pat
+    </footer>
+
+    <script type="text/javascript" src="main.js"></script>
+    <!--[if lt IE 9]>
+    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </body>
 </html>
