--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <section>
-      <div id="store-container"></div>
+      <table id="store-container"></table>
     </section>
 
     <footer>
