added more table functionality

--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
     </header>
 
     <section>
+      <br>
+      <br>
       <table id="store-container"></table>
+      <br>
+      <br>
     </section>
 
     <footer>
-      &copy 2018 Salmon Cookies by Pat
+      &copy; 2018 Salmon Cookies by Pat
     </footer>
 
     <script type="text/javascript" src="main.js"></script>
