--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <title>Salmon Cookies by Pat</title>
   </head>
   <body>
 
@@ -29,6 +30,7 @@
       <table id="store-container"></table>
       <br>
       <br>
+      <input type="button" value="Add Store" onclick="addStore()">
     </section>
 
     <footer>
